--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "start": "node src/app.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "connect-session-sequelize": "^8.0.4",
+    "dotenv": "^16.4.0",
     "express": "^4.19.0",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.2",
     "mysql2": "^3.9.0",
-    "dotenv": "^16.4.0"
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
